--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,7 @@
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
-  <body></body>
+  <body>
+    <include src="./partials/header.html"></include>
+  </body>
 </html>
